--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Congo (Democratic Republic) -- Description and travel'
 - !lcc 'DT'
+- GITenberg
 title: "Langs den Congo tot Brazzaville\r\nDe Aarde en haar Volken, 1906"
 url: http://www.gutenberg.org/ebooks/14121
